--- a/public/documentation.html
+++ b/public/documentation.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>documentation</title>
 </head>
 <body>
+    <header>
     <h1>This is a document</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero beatae cum id dolores repellat magni incidunt ab enim earum impedit.</p>
-</body>
+    <p>Create an API with Node.js</p>
+    </header>
+    
+    <div><ul>
+        <li>Make an API</li>
+        <li>GET</li>
+        <li>request /topMovies/:title</li>
+        <li>request = body parcer</li>
+        <li>With GET request</li>
+    </ul></div>
+
+
+    </body>
 </html>
