--- a/public/documentation.html
+++ b/public/documentation.html
@@ -13,7 +13,8 @@
     
     <div><ul>
         <li>Make an API</li>
-        <li>GET</li>
+        <li>GET Retrieves a resourse </li>
+        <li>POST: Creates a resourse </li>
         <li>request /topMovies/:title</li>
         <li>request = body parcer</li>
         <li>With GET request</li>
